more sidebar issues... not responsive yet

--- a/wp-content/themes/crucial-detail/src/sass/components/_global.scss
+++ b/wp-content/themes/crucial-detail/src/sass/components/_global.scss
@@ -187,7 +187,27 @@ h3{
 	}
 }
 
-
+//SOCIAL
+.socialPrimary{
+	a.glyph-icon{
+		font-size: 40px;
+		color: $color-black;
+		margin: 8px 5px 0 5px;
+		opacity: 0.5;
+		transition: all $trans;
+		&:hover{
+			opacity: 1;
+			transition: all $trans;
+		}
+	}
+	a.glyph_icon_mail_circle{
+		font-size: 45px;
+		top: 1px;
+		position: relative;
+		margin-right: 0;
+		margin-left: 0;
+	}
+}
 
 //FOOTER
 .smallLine{
@@ -237,23 +257,6 @@ h3{
 		height: 60px;
 		text-align: right;
 		padding-right: 1.3em;
-		a.glyph-icon{
-			font-size: 40px;
-			color: $color-black;
-			margin: 8px 5px 0 5px;
-			opacity: 0.5;
-			transition: all $trans;
-			&:hover{
-				opacity: 1;
-				transition: all $trans;
-			}
-		}
-		a.glyph_icon_mail_circle{
-			font-size: 45px;
-			top: 1px;
-			position: relative;
-			margin-right: 0px;
-		}
 	}
 }
 footer{
